--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,3 +11,4 @@ jobs:
         with:
           go-version: '^1.13.1' # The Go version to download (if necessary) and use.
       - run: go version
+      - run: go run main.go
