--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,3 +12,4 @@ jobs:
           go-version: '^1.13.1' # The Go version to download (if necessary) and use.
       - run: go version
       - run: go build .
+      - run: ls -la
